feat: TikTok automation - Like, Comment, Scroll working
- Added full engagement test (like + comment + scroll)
- Fixed typing issue: 0.1s wait prevents IDE focus stealing
- Added scroll fix: click video area before down arrow
- Created automation README with selectors and troubleshooting

Working tests:
- test_tiktok_full_engagement.py: Full Like + Comment + Scroll
- test_pyautogui_automation.py: Comment-only baseline

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ local_storage/temp/
 .env
 .env.local
 .env.*.local
+.env.backup
+.env.bak
+.env.*.backup
+.env.*.bak
 
 # IDE
 .vscode/
@@ -96,3 +100,5 @@ Backend/automation/tests/test_output/screenshots/
 Backend/logs/
 Backend/automation/tests/test_output/logs/
 *.log
+Backend/automation/tests/screenshots/
+Backend/.env.backup*
